[tool.poetry]
name = "rpipy"
version = "0.3.3"
description = "package for retrieving RPI data"
authors = ["isfttr <lucas.fernandes.df@gmail.com>"]
readme = "readme.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

