[tool.poetry]
name = "rpipy"
version = "0.3.3"
description = "package for retrieving RPI data"
authors = ["isfttr <lucas.fernandes.df@gmail.com>"]
readme = "readme.md"
package-mode = false


[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
pandas = "^2.2.1"
langchain = "^0.1.15"
pydantic = "^2.6.4"
ollama = "^0.1.8"
langchain-community = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

